Fix hover issue on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -68,9 +68,7 @@ h1 {
   width: 1.6rem;
 }
 
-.projectLink:hover, .icon:hover {
-  transform: scale(1.3);
-}
+
 
 main {
   z-index: 1;
@@ -138,6 +136,12 @@ hr {
   .portrait {
     max-width: 400px;
   }
+}
+
+@media (hover: hover) {
+ .projectLink:hover, .icon:hover, .contactIcon:hover {
+  transform: scale(1.3);
+}
 }
 
 .smallIcon {
